--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -36,7 +36,7 @@
                         availability of samples and data that match the search criteria. Interested researchers can
                         submit a request for data and materials using an application form and entering key information
                         on the research question, study design, laboratory and analytic methods, as well as researcher
-                        qualifications. <a href="{% static 'ctb_sample_application.pdf' %}"
+                        qualifications. <a href="{% url 'sample_application' %}"
                                            rel="noopener noreferrer" target="_blank">View a sample application here <i
                             class="fas fa-external-link-alt"></i></a>.
                     </div>
