--- a/templates/ctb/user_detail.html
+++ b/templates/ctb/user_detail.html
@@ -28,7 +28,7 @@
 {% block link_page_name %}user-details{% endblock %}
 {% block page_name %}user-details{% endblock %}
 {% block page_header %}
-    <div class="container mt-4">
+    <div class="container-lg mt-4">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
@@ -39,7 +39,7 @@
 
 {% endblock %}
 {% block content %}
-    <div class="container my-5">
+    <div class="container-lg my-5">
         <div class="row user-row justify-content-center">
             <div class="col-lg-10">
                 <h3 class="mb-4">My Profile</h3>
