--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -14,22 +14,20 @@
 {% block page_class %}biosample_tab{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <div class="pt-3">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
-                    </li>
-                    <li class="breadcrumb-item active" aria-current="page">Refine by Clinical Parameters</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="container-lg mt-4">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Clinical Search Facility</li>
+            </ol>
+        </nav>
     </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="container py-2">
+    <div class="container-lg py-2">
         <div class="row">
             <div class="col">
                 <h5>Clinical Search Facility</h5>
@@ -52,27 +50,59 @@
                         criteria.
                     </div>
                     <hr>
-                    <div class="mt-2 d-flex gap-1 justify-content-end">
+                    <div class="mt-2 d-none d-lg-block">
+                    <div class="justify-content-between d-flex d-block">
+                        {#                    <div class="mt-2 d-flex gap-1 justify-content-end d-none d-md-block">#}
+                        <div class="d-lg-inline">
                             <a type="button" class="btn btn-secondary"
                                href="{% url 'clinical_search_facility' %}"><i
-                                    class="fas fa-angle-double-left"></i> Back to Clinical Search
+                                    class="fas fa-angle-double-left d-lg-none"></i> Back to Clinical Search
                             </a>
                             <a type="button" class="btn btn-secondary"
                                href="{% url 'search_tissue_samples' %}"><i
-                                    class="fas fa-angle-double-left"></i> Back to Search Tissue Samples
+                                    class="fas fa-angle-double-left d-lg-none"></i> Back to Search Tissue Samples
                             </a>
+                        </div>
+                        <div class="d-lg-inline">
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#saveModal"><i
-                                    class="fa-solid fa-floppy-disk"></i> Save
+                                    class="fa-solid fa-floppy-disk d-lg-none"></i> Save
                             </button>
                             <a type="button" class="btn btn-primary" href="{% url 'make_application' %}"><i
-                                    class="fas fa-edit"></i> Make
-                                Application
+                                    class="fas fa-edit d-lg-none"></i> Make Application
                             </a>
                             <a type="button" class="btn btn-primary"
-                               href="{% url 'driver_search_facility' %}&{{ filter_encoded_url }}">Search by Driver Mutation <i
-                                    class="fas fa-angle-double-right"></i>
+                               href="{% url 'driver_search_facility' %}&{{ filter_encoded_url }}">Search by Driver
+                                Mutation <i class="fas fa-angle-double-right d-lg-none"></i>
                             </a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="mt-2 gap-2 d-lg-none d-block d-grid">
+                        <a type="button" class="btn btn-secondary"
+                           href="{% url 'clinical_search_facility' %}"><i
+                                class="fas fa-angle-double-left"></i> Back to Clinical Search
+                        </a>
+                        <a type="button" class="btn btn-secondary"
+                           href="{% url 'search_tissue_samples' %}"><i
+                                class="fas fa-angle-double-left"></i> Back to Search Tissue Samples
+                        </a>
+                        <a type="button" class="btn btn-primary"
+                           href="{% url 'driver_search_facility' %}&{{ filter_encoded_url }}">Search by Driver Mutation
+                            <i class="fas fa-angle-double-right"></i>
+                        </a>
+                        <hr>
+                    </div>
+                    <div class="mt-2 gap-2 d-lg-none d-block d-grid">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#saveModal"><i
+                                class="fa-solid fa-floppy-disk"></i> Save
+                        </button>
+                        <a type="button" class="btn btn-primary" href="{% url 'make_application' %}"><i
+                                class="fas fa-edit"></i> Make
+                            Application
+                        </a>
+
                     </div>
                 </div>
             </div>
