--- a/templates/two_factor/core/backup_tokens.html
+++ b/templates/two_factor/core/backup_tokens.html
@@ -1,26 +1,24 @@
 {% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
 {% block page_header %}
-    <div class="container mt-2">
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'two_factor:profile' %}">Account Security</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Backup Tokens</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="container-lg mt-4">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'two_factor:profile' %}">Account Security</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Backup Tokens</li>
+            </ol>
+        </nav>
     </div>
 {% endblock %}
 
 {% block content %}
-    <div class="container my-5">
+    <div class="container-lg my-5">
         <div class="row user-row justify-content-center">
             <div class="col-lg-10">
                 <h3 class="mb-4">Backup Tokens</h3>
                 <div class="card user-panel">
-                    <div class="card-body px-5 py-3">
+                    <div class="card-body px-md-5 py-3">
                         <p>{% blocktrans trimmed %}Backup tokens can be used when your primary and backup
                             phone numbers aren't available. The backup tokens below can be used
                             for login verification. If you've used up all your backup tokens, you
@@ -33,15 +31,19 @@
                                     <li>{{ token.token }}</li>
                                 {% endfor %}
                             </ul>
-                            <p class="fw-light fst-italic">{% blocktrans %}Print these tokens and keep them somewhere safe.{% endblocktrans %}</p>
+                            <p class="fw-light fst-italic">{% blocktrans %}Print these tokens and keep them somewhere
+                                safe.{% endblocktrans %}</p>
                         {% else %}
                             <p>{% trans "You don't have any backup codes yet." %}</p>
                         {% endif %}
 
                         <form method="post">{% csrf_token %}{{ form.as_p }}
-                            <a href="{% url 'two_factor:profile' %}"
-                               class="btn btn-secondary">{% trans "Back to Account Security" %}</a>
-                            <button class="btn btn-primary ms-2" type="submit">{% trans "Generate Tokens" %}</button>
+                            <div class="d-grid gap-2 d-flex">
+                                <a href="{% url 'two_factor:profile' %}"
+                                   class="btn btn-secondary">{% trans "Back to Account Security" %}</a>
+                                <button class="btn btn-primary ms-2"
+                                        type="submit">{% trans "Generate Tokens" %}</button>
+                            </div>
                         </form>
                     </div>
                 </div>
