--- a/templates/accounts/account/password_change.html
+++ b/templates/accounts/account/password_change.html
@@ -7,11 +7,11 @@
 {% block page_name %}password-change{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row justify-content-center p-5">
+    <div class="container-lg">
+        <div class="row justify-content-center py-5">
             <div class="col-lg-6 accounts-col">
                 <div class="card">
-                    <div class="card-header"><h4 class="card-title">Change Password</h4></div>
+                    <div class="card-header"><h4 class="card-title">Change Password!</h4></div>
                     <div class="card-body p-5">
                         {% if messages %}
                             {% for message in messages %}
