--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -134,7 +134,7 @@
                         </button>
                         <button id="search-save" data-formid="save-form" data-titleid="search-save-title"
                                 type="button" class="btn btn-primary"><i id="save-icon" class="fas fa-save"></i><i
-                                id="load-icon" class="d-none fas fa-circle-notch fa-spin"></i> Save
+                                id="load-icon" class="d-none d-md-inline-flex fas fa-circle-notch fa-spin"></i> Save
                         </button>
                     </div>
                 </div>
