research_projects.html added and updated

--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -12,7 +12,7 @@
 {% block page_name %}about_page{% endblock %}
 
 {% block page_header %}
-    <div class="container mt-4">
+    <div class="container-lg mt-4">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
@@ -24,7 +24,7 @@
 
 
 {% block content %}
-    <div class="container">
+    <div class="container-lg">
         <div class="row my-3 d-flex justify-content-center">
             <div class="col-lg-10 px-md-4">
                 <div id="about" class="pt-3">
