cryptography: 41.0.4-->41.0.6 typo fixed lockout handling

--- a/templates/ctb/research_projects.html
+++ b/templates/ctb/research_projects.html
@@ -703,7 +703,7 @@
                                             Cancers
                                             <div>
                                                 <span class="fw-light">Carine Maenhaut, ULB, Brussels</span>
-                                                <a href="mailto:kingTD@cardiff.ac.uk" class="ms-2"><i
+                                                <a href="mailto:cmaenhau@ulb.ac.be" class="ms-2"><i
                                                         class="far fa-envelope"></i> Email</a>
                                             </div>
                                             <p class="d-inline-flex gap-1">
